Modified   release/run.sh